# VMDT

./: .gitignore  CMakeLists.txt
data/: vmdt.pcap
docs/: vmdt.md
include/vmdt/: consensus.hpp  p2p_protocol.hpp  raft.hpp  ssms.hpp  vmdt_protocol.hpp
scripts/: analyze_packets.sh  capture_packets.sh  parse_vmdt_pcap.py  populate_packet_fields.py  quick_capture.sh
src/client/: client_main.cpp  p2p_client.cpp  p2p_client.hpp
src/protocol/: consensus.cpp  raft.cpp
src/server/: p2p_server.cpp  p2p_server.hpp  server_main.cpp
